--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>JS Only Web Application</title>
+    <title>Jeroen's page</title>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -15,7 +15,7 @@
 
 <body onload="fetchIssues()">
 <div class="container">
-    <h1>JS Issue Tracker <small>by CodingTheSmartWay.com</small></h1>
+    <h1>Issue tracker</h1>
     <div class="jumbotron">
         <h3>Add New Issue:</h3>
         <form id="issueInputForm">
@@ -46,7 +46,7 @@
         </div>
     </div>
     <div class="footer">
-        <p>&copy CodingTheSmartWay.com</p>
+        <p>J&reg; </p>
     </div>
 
 </div>
